--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background: #000;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+}
+  
+.scrollbar-hidden {
+    scrollbar-width: none;
+}
