--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,14 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-    background: #000;
+.scrollbar-hidden {
+scrollbar-width: none;
+-ms-overflow-style: none;
 }
 
 .scrollbar-hidden::-webkit-scrollbar {
-    display: none;
+display: none;
 }
   
-.scrollbar-hidden {
-    scrollbar-width: none;
-}
