--- a/client/src/index.css
+++ b/client/src/index.css
@@ -132,7 +132,7 @@
 /* For Firefox */
 html,body {
   scrollbar-width: none;
-  height:100vh;
+  height:100dvh;
   width:100vw;
   overflow-y: hidden;
   overflow-x: hidden;
